--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Project Eruditio</title>
+</head>    
 <body>
-    Project Eruditio: Research and Documentation
+    <header>
+        <h1>Welcome to My little corner of the web.</h1>
+        <p>This Site is and will be in development for probably the next 100 years.</p>
+    </header>
+
+    <hr>
+
+    <main>
+        <h2>About This Page:</h2>
+        <p>I want to grow and become a better educated person, this is what i do working to achive that:</p>
+        <p1>Oh yeah and a lot on here will probably be in German.</p1>
+        
+        <ul>
+            <li>First cool thing</li>
+            <li>Second cool thing</li>
+            <li>Third cool thing</li>
+        </ul>
+    </main>
+
+    <footer>
+        <p>&copy; 2026 My HTML Project :)</p>
+    </footer>
 </body>
 </html>
