--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         <p1>Oh yeah and a lot on here will probably be in German.</p1>
         
         <ul>
-            <li>First cool thing</li>
+            <li>"pittoresk" ist ein relativ neues Wort. Neu ist selbstverständlich abhängig von der eigenommenen Perspektive. Das Wort stammt aus dem 18. Jahrhundert bzw. wurde in diesem Zeitraum in den deutsch Sprachgebrauch Integriert. In der Sprachwissenschaft ([[Linguistik]]) gehört es damit in die Epoche des [[Neuhochdeutsch Sprache|Neuhochdeutschen]] (1650-Heute). Es ist damit nicht "neu" im sinne eines [[Neologismus]], Im Vergleich zum Kernwortschatz der Deutschen Sprache (welches aus dem [[Althochdeutsche Sprache |Althochdeutschen]] (750-1050) und dem [[Mittelhochdeutsche Sprache |Mittelhochdeutschen]] (1050-1350) stammt) ist ein Wort aus dem 18. Jahrhundert tatsächlich ein relativ später Neuzugang. 
+Wörter wie „pittoresk“ bezeichnet man oft als [[Fremdwörter]] oder Lehnwörter. Sie entstanden im 18. Jahrhundert im Zuge des kulturellen Austauschs (besonders mit [[Frankreich]] und [[Italien]]). In dieser Zeit wurden viele Begriffe für [[Ästhetik]], [[Philosophie]] und [[Wissenschaft]] importiert, um neue Konzepte zu benennen, für die es im Deutschen noch keine präzisen Begriffe gab.
+Die [[Etymologie]] des Wortes lässt sich aber über mehrere Sprachen bis zu einer [[Indogermanische Ursprache |indogermanischen Wurzel]] zurückverfolgen. Der Etymologischen Kette nachgehend finden wir das "wir" Deutschen uns hier von den Franzosen und ihrem Wort "_pittoresque_" bedient haben. Die Franzosen haben ihr Wort jedoch ebenfalls "nur" integriert und das von den Italienern, jene haben nämlich das Wort "_pittoresco_". Abgeleitet wird aber auch der Italienische Ursprung. Die Basis dafür bildet das ebenfalls italienische Wort "_pittore_" (Maler), welches auf das [[Latein |lateinische]] "_pictor_" (Maler) zurückgeht. 
+"_pictor_" leitet sich vom Verb "_pingere_" ([[malen]], [[zeichnen]], eigentlich: stechen/[[tätowieren]]) ab.
+Die indogermanische Urwurzel wird als _*peig-_ rekonstruiert, was so viel wie „schneiden“, „ritzen“ oder „farbig markieren“ bedeutet. Davon leiten sich auch Begriffe wie "_[[Pigment]]_" oder das englische "_paint_" ab.</li>
             <li>Second cool thing</li>
             <li>Third cool thing</li>
         </ul>
@@ -28,4 +32,5 @@
         <p>&copy; 2026 My HTML Project :)</p>
     </footer>
 </body>
+
 </html>
