--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <h1>Welcome to My little corner of the web.</h1>
-        <p>This Site is and will be in development for probably the next 100 years.</p>
+        <p>This Site is, and will be in development for probably the next 100 years.</p>
     </header>
 
     <hr>
@@ -34,3 +34,4 @@ Die indogermanische Urwurzel wird als _*peig-_ rekonstruiert, was so viel wie â€
 </body>
 
 </html>
+
