--- a/index.html
+++ b/index.html
@@ -23,13 +23,40 @@
             <li>Second cool thing</li>
             <li>Third cool thing</li>
         </ul>
+        <a href="themed.html" class="button">Visit My Themed Page</a>
     </main>
 
     <footer>
         <p>&copy; 2026 My HTML Project :)</p>
     </footer>
+
+    <style>
+        .button {
+            /* Layout and Spacing */
+            display: inline-block;
+            padding: 12px 24px;
+            margin-top: 20px;
+            
+            /* Colors and Typography */
+            background-color: #007BFF;
+            color: white;
+            text-decoration: none; /* Removes the underline */
+            font-weight: bold;
+            border-radius: 5px;
+            
+            /* Animation for smoothness */
+            transition: background-color 0.3s ease;
+                }
+
+    /* Hover Effect */
+    .button:hover {
+        background-color: #0056b3;
+        cursor: pointer;
+    } 
+</style>
 </body>
 
 </html>
+
 
 
