--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li>Second cool thing</li>
             <li>Third cool thing</li>
         </ul>
-        <a href="theme.html" class="button">Visit My Themed Page</a>
+        <a href="Theme.html" class="button">Visit My Themed Page</a>
     </main>
 
     <footer>
@@ -57,6 +57,7 @@
 </body>
 
 </html>
+
 
 
 
